--- a/initializr/index.html
+++ b/initializr/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Titulo p03</title>
         <h1>Subtitulo</h1>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
